<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ESNBTH</string>
    <string name="hello_world">Bonjour</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_event__list">Event List</string>
    <string name="title_activity_news_list">NewsList</string>
    <string name="title_activity_karlskrona_inf">KarlskronaInf</string>
    <string name="title_activity_news_inf">NewsInf</string>
    <string name="title_activity_event_inf">EventInf</string>
    <string name="title_activity_esn_inf">EsnInf</string>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>News</item>
        <item>Events</item>
        <item>Karlskrona</item>
        <item>Timetable</item>
        <item>About Us</item>
    </string-array>

    <!-- NEWS STRINGS -->
    <string name="news_txt">News</string>


    <!-- EVENTS STRINGS -->
    <string name="event_txt">Events</string>

    <!-- SINGLE EVENTS STRINGS -->
    <string name="description_txt">Description</string>
    <string name="location_txt">Location</string>
    <string name="time_txt">Starting Time</string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home2</item>
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_event</item>
        <item>@drawable/ic_everyday</item>
        <item>@drawable/ic_timetable</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Karlskrona Content -->
    <string name="karlskronaDescription">        Karlskrona can proudly name itself \"Sweden\'s sunniest city\".
        It\'s not just the sun that every year attracts more visitors.
        Karlskrona is a world heritage city with wonderful outdoor experiences,
        pleasant shopping, cool events and great places to visit.</string>
    <string name="karlskronaWelcome">Welcome to Karlskrona, in the middle of the archipelago!</string>

    <string name="esnDescription1">
        Erasmus Student Network (ESN) is one of the biggest interdisciplinary student associations in Europe.
        The organization was founded in 1989 with the aim of supporting and developing student exchange.
        Today we\'re present in over 420 Higher Education Institutions (HEI), also know as local ESN sections, from 36 countries.
    </string>

    <string name="esnDescription2">
        ESN works for the creation of a more mobile and flexible education environment by supporting and developing
        the student exchange from different levels.
    </string>

    <string name="esnDescription3">
        We are ESN!
    </string>

    <!-- Shop Names -->
    <string-array name="ShopsName">
        <item>City Gross</item>
        <item>Elgiganten</item>
        <item>Ica</item>
        <item>Hemköp</item>
        <item>Lidl</item>
        <item>Max Burger</item>
        <item>McDonald\'s</item>
        <item>Second Hand</item>
        <item>Systembolaget</item>
        <item>Systembolaget</item>
        <item>Willys</item>
        <item>Willys</item>
    </string-array>

    <!-- Shop Pictures -->
    <string-array name="ShopsPicture">
        <item>@drawable/cityy</item>
        <item>@drawable/elgiganten</item>
        <item>@drawable/ica</item>
        <item>@drawable/hemkop</item>
        <item>@drawable/lidl</item>
        <item>@drawable/maxburger</item>
        <item>@drawable/mcdo</item>
        <item>@drawable/secondhand</item>
        <item>@drawable/systembo1</item>
        <item>@drawable/systembo1</item>
        <item>@drawable/willys1</item>
        <item>@drawable/willys1</item>
    </string-array>

    <!-- Shop Localisation -->
    <string-array name="ShopsLocalisation">
        <item>Lyckebyvägen 1</item>
        <item>Stationsvägen 29</item>
        <item>Arklimästaregatan 40</item>
        <item>Ronnebygatan 34</item>
        <item>Borgmästarekajen 40</item>
        <item>Lallerstedts gata 7</item>
        <item>Affärshuset Kronan</item>
        <item>Sunnavägen 99A</item>
        <item>Arklimästaregatan 46</item>
        <item>Verkövägen 9</item>
        <item>Tullgatan 1</item>
        <item>Stationsvägen 21</item>
    </string-array>

    <!-- Open Closed -->
    <string-array name="OpenClosed">
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
        <item>Open</item>
    </string-array>

    <!-- Facebook Strings -->
    <string name="facebook_app_id">324146637774895</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
